# Plantdetection

./: .gitignore  GT_segmentation_viewer.py  README.md  application.py  application.py.save  application.py.save.1  batch_inference.py  cal_mAP.ipynb  cal_mAP_mmdet.ipynb  config.py  evaluation.py  extract_classes.py  find_algorithm.py  inference.py  labelme2coco.py  pyproject.toml  requirements.txt  testapi.py  train.py  utils.py  wsgi.py
detectron2/: _C.cp37-win_amd64.pyd  __init__.py  fix.py  i.py  id.py  inference_save_images.py  instance_prediction.py  labelme_to_coco.py  t.py  test.py  test_ch.py  test_cu.py  test_lett.py  test_m.py  test_pa.py  test_straw.py  test_w.py
detectron2/config/: defaults.py
detectron2/data/: build.py  catalog.py  dataset_mapper.py  detection_utils.py
detectron2/engine/: defaults.py
detectron2/evaluation/: pascal_voc_evaluation.py
detectron2/model_zoo/: model_zoo.py
detectron2/structures/: boxes.py  image_list.py  masks.py
detectron2/utils/: comm.py  visualizer.py
mmdet_inference_configs/: 2024-11-28_mask2former_tomato_seed.py  mask2former_tomato.py  mask2former_watermelon_seed.py
mmdetection/: test_base.py
mmdetection/custom_configs/: cascade-mask-rcnn_convnext-s-p4-w7_fpn_4conv1fc-giou_amp-ms-crop-3x_coco_tomato_seed.py  cascade-mask-rcnn_convnext-t-p4-w7_fpn_4conv1fc-giou_amp-ms-crop-3x_coco.py  (+17 more)
plant_utils/: bokchoy_seed.py  chilipepper_seed.py  chilli.py  common.py  cucumber.py  cucumber_seed.py  lettuce_seed.py  melon.py  onion.py  paprika.py  strawberry.py  tomato.py  tomato_seed.py  watermelon_seed.py
(+27 files in other folders)
