[tool.poetry]
name = "plantdetection"
version = "0.1.0"
description = ""
authors = ["wrkim <whirae10@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cython = "^3.0.9"
labelme = "5.0.0"
qtpy = "^2.4.1"

opencv-python = "^4.9.0.80"
fvcore = "^0.1.5.post20221221"
pycocotools = "^2.0.7"
pillow = "<10"
cloudpickle = "^3.0.0"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.2.0%2Bcu121-cp39-cp39-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.17.0%2Bcu121-cp39-cp39-win_amd64.whl" }
scikit-learn = "1.4.0"
tensorboard = "^2.16.2"
flask = "^3.0.2"
gunicorn = "^21.2.0"
pyqt6 = "^6.6.1"
numpy = "<2"
mmengine = ">=0.7.1,<1.0.0"
mmdet = "^3.3.0"
mmcv = {url = "https://download.openmmlab.com/mmcv/dist/cu121/torch2.2.0/mmcv-2.2.0-cp39-cp39-win_amd64.whl"}
labelme2coco = "0.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
